language/move-lang/tests/move_check/typing/unary_not_invalid.exp
error: 

   ┌── tests/move_check/typing/unary_not_invalid.move:7:10 ───
   │
 7 │         !&true;
   │          ----- The type: '&bool'
   │          ----- Is not compatible with: 'bool'
   │          ^^^^^ Invalid argument to '!'
   │

error: 

   ┌── tests/move_check/typing/unary_not_invalid.move:8:10 ───
   │
 8 │         !&false;
   │          ------ The type: '&bool'
   │          ------ Is not compatible with: 'bool'
   │          ^^^^^^ Invalid argument to '!'
   │

error: 

   ┌── tests/move_check/typing/unary_not_invalid.move:9:10 ───
   │
 9 │         !0;
   │          - The type: integer
   │          - Is not compatible with: 'bool'
   │          ^ Invalid argument to '!'
   │

error: 

    ┌── tests/move_check/typing/unary_not_invalid.move:10:10 ───
    │
 10 │         !1;
    │          - The type: integer
    │          - Is not compatible with: 'bool'
    │          ^ Invalid argument to '!'
    │

error: 

    ┌── tests/move_check/typing/unary_not_invalid.move:6:24 ───
    │
  6 │     fun t0(x: bool, r: R) {
    │                        - The type: '0x8675309::M::R'
    ·
 11 │         !r;
    │          - Is not compatible with: 'bool'
    │          ^ Invalid argument to '!'
    │

error: 

    ┌── tests/move_check/typing/unary_not_invalid.move:6:24 ───
    │
  6 │     fun t0(x: bool, r: R) {
    │                        - The type: '0x8675309::M::R'
    ·
 12 │         !r;
    │          - Is not compatible with: 'bool'
    │          ^ Invalid argument to '!'
    │

error: 

    ┌── tests/move_check/typing/unary_not_invalid.move:13:10 ───
    │
 13 │         !(0, false);
    │          ---------- The type: '({integer}, bool)'
    │          ---------- Is not compatible with: 'bool'
    │          ^^^^^^^^^^ Invalid argument to '!'
    │

error: 

    ┌── tests/move_check/typing/unary_not_invalid.move:14:10 ───
    │
 14 │         !();
    │          -- The type: '()'
    │          -- Is not compatible with: 'bool'
    │          ^^ Invalid argument to '!'
    │

